--- a/referral/templates/referral/all_ref.html
+++ b/referral/templates/referral/all_ref.html
@@ -5,7 +5,12 @@
 
 {% block content %}
 <div class="container">
-<div class="row">
+
+
+
+{% if ref_req %}
+
+          <div class="row">
 
             <!-- Area Chart -->
             <div class="col-xl-12 col-lg-12">
@@ -13,21 +18,26 @@
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Referrals</h6>
+                <a href="#" data-target="#new_referral_form" data-toggle="modal" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-plus fa-sm text-50"></i> Add New Referral</a>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                    
-                    <div class="table-responsive">
-                    <table class="table table-striped table-bordered">
+                    <div class="table-responsive text-nowrap">
+                    <table class="table w-auto table-striped table-bordered">
                         <tbody>
+                          <thead>
                           <tr class="table-secondary">
                             <th>Time</th>
                             <th>Name</th>
                             <th>Contact</th>
                             <th>Email</th>
                             <th>Reference</th>
-                            <th>Add notes</th>
+                            <th>Status</th>
+                            <th>Amount</th>
+                            <th>Notes</th>
+                            <th>Edit</th>
                           </tr>
+                        </thead>
 {% for i in ref_req %}
                           <tr class="table-{{ i.alert }}">
                             <td>{{ i.date_posted|timesince }} ago</td>
@@ -35,60 +45,78 @@
                             <td>{{ i.contact_number }}</td>
                             <td>{{ i.email }}</td>
                             <td>{{ i.reference }}</td>
+                            <td>{{ i.status}}</td>
+                            <td>{{ i.amount }}</td>
+                            <td>{{ i.note }}</td>
                             <td>
-          <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-            <div class="input-group">
-              <input type="text" class="form-control bg-light border-0 small" placeholder="Add notes" aria-label="Search" aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-primary" type="button">
-                  <i class="fas fa-plus fa-sm"></i>
-                </button>
-              </div>
-            </div>
-          </form>                             
-                            </td>
-                            <td>                  
-                        <a href="{% url 'accept' i.id %}" class="btn btn-success btn-sm btn-circle">
-                          <i class="fas fa-check"></i>
+                        <a href="{% url 'console' rpk=i.id %}" class="btn btn-success btn-sm btn-circle">
+                          <i class="fas fa-pen"></i>
                         </a>
-
-                      </td>
-                      <td>
-                        <a href="{% url 'delete' i.id %}" class="btn btn-danger btn-sm btn-circle">
-                          <i class="fas fa-trash"></i>
-                        </a>                        
-                      </td>
+                            </td>
                             </tr>
 {% endfor %}
                         </tbody>
                       </table>
-                    </div>
+                    </div><br>
+                    <a href="{% url 'all_ref' %}">All referrals &rarr;</a>
+<br><br>
+{% if urform %}
+        <div class="col-xl-12 col-md-12 mb-12">
+              <form class="user" method="POST">
+                      {% csrf_token %}
+                      <fieldset class="form-group">
+<div class="row">
+  <div class="col-xl-8 col-lg-8 col-md-8">
+    <div class="form-row col-md-12">
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.name|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.contact_number|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.email|as_crispy_field }}
+      </div>
+    </div>
+
+    <div class="form-row col-md-12">
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.status|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.amount|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.city|as_crispy_field }}
+      </div>
+    </div> 
+</div>
+    <div class="form-row col-md-4">
+    {{ urform.note|as_crispy_field }} 
+    </div>  
+</div>
+
+</fieldset>
+    <div class="form-group">
+      <div class="row">
+        <div class=" col-md-3">
+            <button class="btn btn-primary btn-user btn-block" type="submit" name="bank_info">Update</button>
+        </div>
+        <div class="col-md-3">
+            <a href="{% url 'console' %}"><button class="btn btn-secondary btn-user btn-block" type="button">Cancal</button></a>
+        </div>
+      </div>
+    </div>
+    </form>
+               </div>
+{% endif %}
 
                 </div>
               </div>
             </div>
-
-
-<div class="col-xl-6 col-md-6 mb-6">
-
-    <div class="card shadow mb-4">
-          <div class="card-header py-3">
-           <h6 class="m-0 font-weight-bold text-primary">Add New Referral</h6>
           </div>
-    <div class="card-body" id="bankform">  
-        <form class="user" method="POST">
-                {% csrf_token %}
-                <fieldset class="form-group">
-                {{ r_form|crispy }}
-                </fieldset>
-                <div class="form-group">
-                <button class="btn btn-primary btn-user btn-block" type="submit" name="bank_info">Add</button>
-                </div>
-        </form>
-    </div>
-  </div>
+{% endif %}
 </div>
-</div>
-</div>
+
 
 {% endblock %}
