--- a/referral/templates/referral/console.html
+++ b/referral/templates/referral/console.html
@@ -1,12 +1,123 @@
 {% extends "referral/consolebase.html" %}
 {% load crispy_forms_tags %}
-
+{% load static %}
 {% block title %}<title>vihav | console</title>{% endblock title %}
 {% block head %}<h4>Console | Vihav Priviledge</h4>{% endblock head %}
 {% block content %}
 
         <!-- Begin Page Content -->
-        <div class="container-fluid">
+<div class="container-fluid">
+
+{% if ref_req %}
+
+          <div class="row">
+
+            <!-- Area Chart -->
+            <div class="col-xl-12 col-lg-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-primary">Referrals</h6>
+                <a href="#" data-target="#new_referral_form" data-toggle="modal" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-plus fa-sm text-50"></i> Add New Referral</a>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                    <div class="table-responsive text-nowrap">
+                    <table class="table w-auto table-striped table-bordered">
+                        <tbody>
+                          <thead>
+                          <tr class="table-secondary">
+                            <th>Time</th>
+                            <th>Name</th>
+                            <th>Contact</th>
+                            <th>Email</th>
+                            <th>Reference</th>
+                            <th>Status</th>
+                            <th>Amount</th>
+                            <th>Notes</th>
+                            <th>Edit</th>
+                          </tr>
+                        </thead>
+{% for i in ref_req|slice:":5" %}
+                          <tr class="table-{{ i.alert }}">
+                            <td>{{ i.date_posted|timesince }} ago</td>
+                            <td>{{ i.name }}</td>
+                            <td>{{ i.contact_number }}</td>
+                            <td>{{ i.email }}</td>
+                            <td>{{ i.reference }}</td>
+                            <td>{{ i.status}}</td>
+                            <td>{{ i.amount }}</td>
+                            <td>{{ i.note }}</td>
+                            <td>
+                        <a href="{% url 'console' rpk=i.id %}" class="btn btn-success btn-sm btn-circle">
+                          <i class="fas fa-pen"></i>
+                        </a>
+                            </td>
+                            </tr>
+{% endfor %}
+                        </tbody>
+                      </table>
+                    </div><br>
+                    <a href="{% url 'all_ref' %}">All referrals &rarr;</a>
+<br><br>
+{% if urform %}
+        <div class="col-xl-12 col-md-12 mb-12">
+              <form class="user" method="POST">
+                      {% csrf_token %}
+                      <fieldset class="form-group">
+<div class="row">
+  <div class="col-xl-8 col-lg-8 col-md-8">
+    <div class="form-row col-md-12">
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.name|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.contact_number|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.email|as_crispy_field }}
+      </div>
+    </div>
+
+    <div class="form-row col-md-12">
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.status|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.amount|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-4 mb-0">
+        {{ urform.city|as_crispy_field }}
+      </div>
+    </div> 
+</div>
+    <div class="form-row col-md-4">
+    {{ urform.note|as_crispy_field }} 
+    </div>  
+</div>
+
+</fieldset>
+    <div class="form-group">
+      <div class="row">
+        <div class=" col-md-3">
+            <button class="btn btn-primary btn-user btn-block" type="submit" name="bank_info">Update</button>
+        </div>
+        <div class="col-md-3">
+            <a href="{% url 'console' %}"><button class="btn btn-secondary btn-user btn-block" type="button">Cancal</button></a>
+        </div>
+      </div>
+    </div>
+    </form>
+               </div>
+{% endif %}
+
+                </div>
+              </div>
+            </div>
+          </div>
+{% endif %}
+
+{% if acc_req %}
 
           <div class="row">
 
@@ -58,11 +169,35 @@
                     <a href="{% url 'all_req' %}">All requests &rarr;</a>
 
                 </div>
+
+                </div>
+              </div>
+            </div>
+{% else %}
+          <div class="row">
+
+            <!-- Area Chart -->
+            <div class="col-xl-12 col-lg-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-primary">Account Requests</h6>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                  <div class="table-responsive">
+                            <center><img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 15rem;" src="{% static 'referral/img/undraw_done_checking_ty9a.svg' %}" alt="">
+                            <h5>All account requests are reviewed</h5></center>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
 
+{% endif %}
 
+
+{% if wd_req %}
 
           <div class="row">
 
@@ -71,102 +206,142 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">Referrals</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">Withdraw Requests</h6>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
                     
-                    <div class="table-responsive text-nowrap">
-                    <table class="table w-auto table-striped table-bordered">
+                    <div class="table-responsive">
+                    <table class="table table-striped table-bordered">
                         <tbody>
-                          <thead>
                           <tr class="table-secondary">
                             <th>Time</th>
-                            <th>Name</th>
-                            <th>Contact</th>
-                            <th>Email</th>
-                            <th>Reference</th>
-                            <th style="padding: 1rem 5rem; width: 100rem;">Add notes</th>
-                            <th style=""  >Update Status</th>
-                            <th>Update amount</th>
+                            <th>Amount</th>
+                            <th>Status</th>
+                            <th>Holder</th>         
+                            <th>Note</th>
+                            <th>Edit</th>
                           </tr>
-                        </thead>
-{% for i in ref_req|slice:":5" %}
+{% for i in wd_req|slice:":5" %}
                           <tr class="table-{{ i.alert }}">
                             <td>{{ i.date_posted|timesince }} ago</td>
-                            <td>{{ i.name }}</td>
-                            <td>{{ i.contact_number }}</td>
-                            <td>{{ i.email }}</td>
-                            <td>{{ i.reference }}</td>
-                            <td>
+                            <td>{{ i.amount }}</td>
+                            <td>{{ i.status }}</td>
+                            <td>{{ i.holder.email }}</td>
+                            <td>{{ i.note }}</td>
+                            <td>                   
+                        <a href="{% url 'console' wpk=i.id %}" class="btn btn-success btn-sm btn-circle">
+                          <i class="fas fa-pen"></i>
+                        </a>
 
-  <form class="d-none d-sm-inline-block" method="POST">
-      <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_input }}">
-
-      <fieldset class="form-group">
-        <div class="input-group">
-           <input type="text" class="form-control bg-light border-0 small" placeholder="Add notes" aria-label="Search" aria-describedby="basic-addon2">
-        </div>                           	
-                            </td>
-                            <td>
-  <div class="form-group">
-    <select class="form-control bg-light" id="exampleFormControlSelect1">
-      <option></option>
-      <option>success</option>
-      <option>not reviewed</option>
-      <option>pending</option>
-      <option>fail</option>
-    </select>
-  </div>
-
-                            </td>
-                            <td>
-            <div class="input-group">
-              <input type="text" class="form-control bg-light border-0 small" placeholder="amount" aria-label="Search" aria-describedby="basic-addon2">
-            </div>   
-                            </td>
-       </fieldset>
-                            <td>
-               <div class="input-group-append">
-                <button class="btn btn-success" type="submit">
-                  <i class="fas fa-plus fa-sm"></i>
-                </button>
-              </div>                             
-                            </td>
-</form>
+                      </td>
                             </tr>
 {% endfor %}
                         </tbody>
                       </table>
-                    </div><br>
-                    <a href="{% url 'all_ref' %}">All referrals &rarr;</a>
+                    </div>
+                    <a href="{% url 'all_req' %}">All requests &rarr;</a>
 
+<br><br>
+{% if wd_form %}
+        <div class="col-xl-12 col-md-12 mb-12">
+              <form class="user" method="POST">
+                      {% csrf_token %}
+                      <fieldset class="form-group">
+<div class="row">
+    <div class="form-row col-md-12">
+      <div class="form-group col-md-3 mb-0">
+        {{ wd_form.holder|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-2 mb-0">
+        {{ wd_form.amount|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-2 mb-0">
+        {{ wd_form.status|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-5 mb-0">
+        {{ wd_form.note|as_crispy_field }}
+      </div>
+    </div> 
+</div>
+
+</fieldset>
+    <div class="form-group">
+      <div class="row">
+        <div class=" col-md-3">
+            <button class="btn btn-primary btn-user btn-block" type="submit" name="u_withdraw">Update</button>
+        </div>
+        <div class="col-md-3">
+            <a href="{% url 'console' %}"><button class="btn btn-secondary btn-user btn-block" type="button">Cancal</button></a>
+        </div>
+      </div>
+    </div>
+    </form>
+</div>
+{% endif %}
+
+                </div>
+
+                </div>
+              </div>
+            </div>
+{% else %}
+          <div class="row">
+
+            <!-- Area Chart -->
+            <div class="col-xl-12 col-lg-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-primary">Withdrawal Requests</h6>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                  <div class="table-responsive">
+                            <center><img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 15rem;" src="{% static 'referral/img/undraw_wallet_aym5.svg' %}" alt="">
+                            <h5>All withdrawal requests are reviewed</h5></center>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
 
-<div class="row">
-        <div class="col-xl-6 col-md-6 mb-6">
+{% endif %}
 
-                  <div class="card shadow mb-4">
-                    <div class="card-header py-3">
-                      <h6 class="m-0 font-weight-bold text-primary">Add New Referral</h6>
-                    </div>
-					<div class="card-body" id="bankform">  
-					    <form class="user" method="POST">
-					            {% csrf_token %}
-					            <fieldset class="form-group">
-					            {{ r_form|crispy }}
-					            </fieldset>
-					            <div class="form-group">
-					            <button class="btn btn-primary btn-user btn-block" type="submit" name="bank_info">Add</button>
-						</div>
-				        </form>
-			        </div>
-      			   </div>
+
+
+
+
+
+
+
+  <!-- form Modal-->
+  <div class="modal fade" id="new_referral_form" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add new referral</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
         </div>
+        <div class="modal-body">
+
+              <form class="user" method="POST">
+                      {% csrf_token %}
+                      <fieldset class="form-group">
+                      {{ r_form|crispy }}
+                      </fieldset>
+                      <div class="form-group">
+                      <button class="btn btn-primary btn-user btn-block" type="submit" name="bank_info">Add</button>
+                      </div>
+                </form>
+
         </div>
+      </div>
+    </div>
+  </div>
+       
 </div>
       <!-- Footer -->
       <footer class="sticky-footer bg-white">
