--- a/referral/templates/referral/newabout.html
+++ b/referral/templates/referral/newabout.html
@@ -39,7 +39,7 @@
   </head>
   <body>
 <div class="h_iframe">
-<iframe src="https://prakrutikaahar.com/" target="_blank"  target="_top" frameborder="0" allowfullscreen></iframe>
+<iframe src="http://vihavprivilege.pe.hu/" target="_blank"  target="_top" frameborder="0" allowfullscreen></iframe>
 </div>
   </body>
 </html>
