--- a/referral/templates/referral/newhome.html
+++ b/referral/templates/referral/newhome.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
 <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
@@ -39,20 +38,7 @@
   </head>
   <body>
 <div class="h_iframe">
-<iframe src="http://vihavprivilege.pe.hu/" target="_blank"  target="_top" frameborder="0" allowfullscreen></iframe>
+<iframe src="http://vihavprivilege.pe.hu/index.php/home-2/" target="_blank"  target="_top" frameborder="0" allowfullscreen></iframe>
 </div>
   </body>
 </html>
-
-
-
-1. differnt view for both
-2. signup page: chnage imager
-3. signup dropdown: vihav client, vihav emplyes, vendor/suplier, chanel partners, others, 
-4. sequence
-5. first name
-6. city > adress, number>cpntact no.
-7. signin > bg color > design > slider
-
-8. 
-home, login, signup, 
