--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-  <div class="container">
+  <div class="container" style="padding: 2rem;">
 
     <!-- Outer Row -->
     <div class="row justify-content-center">
@@ -16,9 +16,9 @@
               <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
               <div class="col-lg-6">
                 <div class="p-5">
-                  <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                  </div>
+                  <div class="text-left">
+                    <b><h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1></b>
+                  </div><hr>
                           <form class="user" method="POST">
          {% csrf_token %}
          <fieldset class="form-group">
