--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -12,14 +12,36 @@
           <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
           <div class="col-lg-7">
             <div class="p-5">
-              <div class="text-center">
+              <div class="text-left">
                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
-              </div>
+              </div> <hr>
               <form class="user" method="POST">
+
          {% csrf_token %}
          <fieldset class="form-group">
-            {{ form|crispy }}
+
+<div class="row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.first_name|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ form.last_name|as_crispy_field }}
+      </div>
+</div>
+<div class="row">
+      <div class="form-group col-md-4 mb-0">
+        {{ form.contact_number|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-8 mb-0">
+        {{ form.email|as_crispy_field }}
+      </div>
+</div>
+      {{ form.adress|as_crispy_field }}
+      {{ form.i_am|as_crispy_field }} 
+      {{ form.password1|as_crispy_field }} 
+      {{ form.password2|as_crispy_field }} 
          </fieldset>
+
           <button class="btn btn-primary btn-user btn-block" type="submit">Register Account</button>
               </form>
               <hr>
@@ -29,7 +51,9 @@
               <div class="text-center">
                 <a class="small" href="{% url 'login' %}">Already have an account? Login!</a>
               </div>
-            </div>
+</div>
+</div>
+
           </div>
         </div>
       </div>
