--- a/referral/static/referral/css/sb-admin-2.css
+++ b/referral/static/referral/css/sb-admin-2.css
@@ -10,6 +10,34 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ .form-group label {
+  display: block;
+  margin-bottom: 2px;
+  font-size: 18px;
+  color: #dcb865;
+}
+.form-group input {
+  border: 1px solid #dcb865;
+  border-radius: 10px;
+  color: #dcb865;
+  text-align: left;
+  padding-left: 10px;
+}
+.form-group input:focus,
+.form-group input:active {
+  border: 1px solid #dcb865;
+  border-radius: 10px;
+  outline: 0;
+}
+
+#id_account_type {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #dcb865;
+  border-radius: 10px;
+  color: #dcb865;
+}
+
 
 .navbar-brand{
  display: none; 
@@ -2380,23 +2408,22 @@ a.btn.disabled,
 fieldset:disabled a.btn {
   pointer-events: none;
 }
-
+ 
 .btn-primary {
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: #dcb865;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #2e59d9;
-  border-color: #2653d4;
+  background-color: #bd9a49;
+  border-color: #bd9a49;
 }
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
   background-color: #2e59d9;
-  border-color: #2653d4;
+  border-color: #dcb865;
   box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
 }
 
@@ -2409,7 +2436,7 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #2653d4;
+  background-color: #dcb865;
   border-color: #244ec9;
 }
 
@@ -4879,7 +4906,7 @@ a.badge:hover, a.badge:focus {
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #2653d4;
+  background-color: #dcb865;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
@@ -6403,7 +6430,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #2653d4 !important;
+  background-color: #dcb865 !important;
 }
 
 .bg-secondary {
@@ -9782,7 +9809,7 @@ a:focus {
 }
 
 #wrapper #content-wrapper {
-  background-color: #f8f9fc;
+  background-color: #FBF6D9;
   width: 100%;
   overflow-x: hidden;
 }
@@ -10879,17 +10906,6 @@ form.user .btn-user {
   box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
 }
 
-.btn-facebook {
-  color: #fff;
-  background-color: #3b5998;
-  border-color: #fff;
-}
-
-.btn-facebook:hover {
-  color: #fff;
-  background-color: #30497c;
-  border-color: #e6e6e6;
-}
 
 .btn-facebook:focus, .btn-facebook.focus {
   color: #fff;
