--- a/referral/templates/referral/dashboard.html
+++ b/referral/templates/referral/dashboard.html
@@ -24,7 +24,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+ 
   <!-- Custom styles for this template-->
   <link rel="stylesheet" type="text/css" href="{% static 'referral/css/sb-admin-2.css' %}">
 <!-- Hotjar Tracking Code for https://vihavpriviledge.herokuapp.com/ -->
@@ -227,7 +227,7 @@ Your Vihav Privilege account is under review. Our support team will process your
           <div class="col-xl-6 col-md-6 mb-6">
             <div class="d-sm-flex align-items-center justify-content-between mb-4">
                <h1 class="h3 mb-0 text-gray-800">Your Referrals</h1>
-                <a href="#" data-target="#new_referral_form" data-toggle="modal" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-plus fa-sm text-50"></i> Submit New Referral</a>
+                <a href="#" data-target="#new_referral_form" data-toggle="modal" class="d-inline-block d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-plus fa-sm text-50"></i> Submit New Referral</a>
             </div> 
 
             {% if referrals|length != 0 %}
@@ -235,7 +235,7 @@ Your Vihav Privilege account is under review. Our support team will process your
 
             <div class="card border-left-{{ i.alert }} shadow py-2">
               <div class="card-body">
-                <div class="row no-gutters align-items-center">
+                <div class="row no-gutters align-items-left">
                   <div class="col mr-2">
                     <div class="text-xs font-weight-bold text-{{ i.alert }} text-uppercase mb-1">{{ i.status }}
                     </div>
@@ -398,6 +398,7 @@ Your Vihav Privilege account is under review. Our support team will process your
 
   <!-- Logout Modal-->
   <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
