--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,50 +1,52 @@
-{% extends "users/userbase.html" %}
-{% load crispy_forms_tags %}
-{% block content %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <div class="container" style="padding: 2rem;">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets\image/favicon.ico' %}">
 
-    <!-- Outer Row -->
-    <div class="row justify-content-center">
-
-      <div class="col-xl-10 col-lg-12 col-md-9">
-
-        <div class="card o-hidden border-0 shadow-lg my-5">
-          <div class="card-body p-0">
-            <!-- Nested Row within Card Body -->
-            <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-              <div class="col-lg-6">
-                <div class="p-5">
-                  <div class="text-left">
-                    <b><h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1></b>
-                  </div><hr>
-                          <form class="user" method="POST">
-         {% csrf_token %}
-         <fieldset class="form-group">
-          {{ form|crispy }}
-         </fieldset>
-         <div class="form-group">
-                    <button class="btn btn-primary btn-user btn-block" type="submit">Log In</button>
-         </div>
-      </form>
-                  <hr>
-                  <div class="text-center">
-                    <a class="small" href="{% url 'password_reset' %}">Forgot Password?</a>
-                  </div>
-                  <div class="text-center">
-                    <a class="small" href="{% url 'signup' %}">Create an Account!</a>
-                  </div>
+    <title>Login | One Vihav</title>
+    <!-- style -->
+    <link rel="stylesheet" href="{% static 'referral/assets/css/style.css' %}" />
+  </head>
+  <body>
+    <section class="login-screen">
+      <!-- flex box start -->
+      <div class="container">
+        <div class="row">
+          <div class="col col-1">
+            <img src="{% static 'referral/assets/image/LogoBox.png' %}"alt="logo" class="logo-box" />
+          </div>
+          <div class="col col-2">
+            <form method="POST" class="form">
+              <h3 class="form-heading">Welcome Back!</h3>
+              <div class="form-fields">
+              {% csrf_token %}
+                <div class="form-group">
+                  <label for="email"> Email address*</label>
+                  {{ form.username }}
                 </div>
+                <div class="form-group">
+                  <label for="password"> Password*</label>
+                  {{ form.password }}
+                </div>
+                <div class="form-group">
+                <button type="submit" name="login" class="action-button">
+                  Log In
+                </button>
               </div>
-            </div>
+              </div>
+              <div class="more-action">
+                <a href="{% url 'password_reset' %}">Forget Password?</a>
+                <a href="{% url 'signup' %}">Don’t have login details? <span>Register now</span></a>
+              </div>
+            </form>
           </div>
         </div>
-
       </div>
-
-    </div>
-
-  </div>
-
-{% endblock content %}
+      <!-- flex box end -->
+    </section>
+  </body>
+</html>
