--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,65 +1,117 @@
-{% extends "users/userbase.html" %}
-{% load crispy_forms_tags %}
-{% block content %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets\image/favicon.ico' %}">
 
-  <div class="container">
+    <title>Sign Up | One Vihav</title>
+    <!-- style -->
+    <link rel="stylesheet" href="{% static 'referral/assets/css/style.css' %}" />
+  </head>
+  <body>
+    <section class="register-screen">
+      <!-- flex box start -->
+      <div class="register-container">
+        <div class="register-row">
+          <div class="register-col register-col-1">
+            <img
+              src="{% static 'referral/assets/image/register.png' %}"
+              alt="register image"
+              class="img-responsive"
+            />
+            <img
+              src="{% static 'referral/assets/image/LogoBox.png' %}"
+              alt="logo"
+              class="mob-image"
+            />
+          </div>
+          <div class="register-col register-col-2">
+            <div class="form-div">
+              <form method="POST" class="form">
+                <b><h3 class="register-form-heading">Create an Account!</h3></b>
+                <div class="register-form-fields">
+                  {% csrf_token %}
+                  <div class="form-row">
+                    <div class="col">
+                      <div class="register-form-group">
+                        <label for="firstname"> First Name*</label>
+                        {{ form.first_name }}
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="register-form-group">
+                        <label for="Lname"> Last Name*</label>
+                        {{ form.last_name }}
+                      </div>
+                    </div>
+                  </div>
 
-    <div class="card o-hidden border-0 shadow-lg my-5">
-      <div class="card-body p-0">
-        <!-- Nested Row within Card Body -->
-        <div class="row">
-          <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-          <div class="col-lg-7">
-            <div class="p-5">
-              <div class="text-left">
-                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
-              </div> <hr>
-              <form class="user" method="POST">
+                  <div class="form-row">
+                    <div class="col-1">
+                      <div class="register-form-group">
+                        <label for="number"> Contact Number*</label>
+                        {{ form.contact_number }}
+                      </div>
+                    </div>
+                    <div class="col-2">
+                      <div class="register-form-group">
+                        <label for="email"> Email address*</label>
+                        {{ form.email }}
+                      </div>
+                    </div>
+                  </div>
 
-         {% csrf_token %}
-         <fieldset class="form-group">
+                  <div class="register-form-group">
+                    <label for="address"> Address*</label>
+                    {{ form.adress }}
+                  </div>
+                  <div class="register-form-group">
+                    <label for="am"> I am*</label>
+                    {{ form.i_am }}
+                  </div>
+                  <div class="register-form-group">
+                    <label for="password"> Password*</label>
+                    <input
+                      type="password"
+                      name="email"
+                      class="form-field"
+                      id="password"
+                      required
+                    />
+                  </div>
 
-<div class="row">
-      <div class="form-group col-md-6 mb-0">
-        {{ form.first_name|as_crispy_field }}
-      </div>
-      <div class="form-group col-md-6 mb-0">
-        {{ form.last_name|as_crispy_field }}
-      </div>
-</div>
-<div class="row">
-      <div class="form-group col-md-4 mb-0">
-        {{ form.contact_number|as_crispy_field }}
-      </div>
-      <div class="form-group col-md-8 mb-0">
-        {{ form.email|as_crispy_field }}
-      </div>
-</div>
-      {{ form.adress|as_crispy_field }}
-      {{ form.i_am|as_crispy_field }} 
-      {{ form.password1|as_crispy_field }} 
-      {{ form.password2|as_crispy_field }} 
-         </fieldset>
+                  <div class="register-form-group">
+                    <label for="Cpassword"> Password confirmation*</label>
+                    <input
+                      type="password"
+                      name="passwordc"
+                      class="form-field"
+                      id="Cpassword"
+                      required
+                    />
+                    <small
+                      >Enter the same password as before, for
+                      verification.</small
+                    >
+                  </div>
+                  <button type="submit" name="login" class="action-button">
+                    Register Account
+                  </button>
+                </div>
+                <div class="more-action">
+                  <a href="{% url 'password_reset' %}">Forgot Password?</a>
 
-          <button class="btn btn-primary btn-user btn-block" type="submit">Register Account</button>
+                  <a href="{% url 'login' %}"> Already have Account? <span>Login Now</span></a>
+                </div>
               </form>
-              <hr>
-              <div class="text-center">
-                <a class="small" href="{% url 'password_reset' %}">Forgot Password?</a>
-              </div>
-              <div class="text-center">
-                <a class="small" href="{% url 'login' %}">Already have an account? Login!</a>
-              </div>
-</div>
-</div>
-
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
-  </div>
-
-
-{% endblock content %}
+      <!-- flex box end -->
+    </section>
+  </body>
+</html>
