massive frontend chnage

--- a/referral/templates/referral/about.html
+++ b/referral/templates/referral/about.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Vihav</title>
+    <title>One Vihav</title>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/img/favicon.ico' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'referral/assets/css/all.min.css' %}">
