--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets\image/favicon.ico' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/image/favicon.ico' %}">
 
     <title>Login | One Vihav</title>
     <!-- style -->
@@ -39,7 +39,7 @@
               </div>
               </div>
               <div class="more-action">
-                <a href="{% url 'password_reset' %}">Forget Password?</a>
+                <a href="{% url 'password_reset' %}">Forgot Password?</a>
                 <a href="{% url 'signup' %}">Don’t have login details? <span>Register now</span></a>
               </div>
             </form>
