--- a/referral/templates/referral/consolebase.html
+++ b/referral/templates/referral/consolebase.html
@@ -14,11 +14,11 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  {% block title %}{% endblock title %} 
+  <title>Console | One Vihav</title>
 
-  <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/img/favicon.ico' %}">
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/image/favicon.ico' %}">
   <!-- Custom fonts for this template-->
-  
+
   <link rel="stylesheet" type="text/css" href="{% static 'referral/vendor/fontawesome-free/css/all.min.css' %}">
 
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
