--- a/referral/templates/referral/home.html
+++ b/referral/templates/referral/home.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>One Vihav</title>
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets\image/favicon.ico' %}">
+   
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/image/favicon.ico' %}">
 
     
     <link rel="stylesheet" type="text/css" href="{% static 'referral/assets/css/style.css' %}">
