massive frontend chnage

--- a/referral/templates/referral/dashboard.html
+++ b/referral/templates/referral/dashboard.html
@@ -14,7 +14,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Vihav | Dashboard</title>
+  <title>Dashboard | One Vihav</title>
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/image/favicon.ico' %}">
   <!-- Custom fonts for this template-->
   <link rel="stylesheet" type="text/css" href="{% static 'referral/vendor/fontawesome-free/css/all.min.css' %}">
@@ -66,9 +66,9 @@ function SwapDivsWithClick(div1,div2)
           <div class="text-center">
              <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="{% static 'referral/img/undraw_working_remotely_jh40.svg' %}" alt="">
           </div>
-          <center><h2><b>Thank you for your interest in Vihav Privilege</b></h2>
+          <center><h2><b>Thank you for your interest in One Vihav</b></h2>
             <h5 class="p-4">
-Your Vihav Privilege account is under review. Our support team will process your application soon and get in touch with you if needed. You will receive a confirmation email once verification complete.</h5>
+Your One Vihav account is under review. Our support team will process your application soon and get in touch with you if needed. You will receive a confirmation email once verification complete.</h5>
 
           <a href="{% url 'logout' %}">Log out &rarr;</a>
 
@@ -96,7 +96,7 @@ Your Vihav Privilege account is under review. Our support team will process your
         <!-- Topbar -->
         <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-          <a class="navbar-brand" href="#">VIHAV PRIVILEDGE</a>
+          <a class="navbar-brand" href="#">ONE VIHAV</a>
 
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto">
