--- a/referral/static/referral/assets/css/style.css
+++ b/referral/static/referral/assets/css/style.css
@@ -413,12 +413,13 @@ button:hover {
   margin-bottom: 20px;
 }
 
-#id_i_am {
+#id_i_am, #select {
   width: 100%;
   height: 40px;
   border: 1px solid var(--primary-color);
   border-radius: 10px;
   color: var(--primary-color);
+  background-color: #fff;
 }
 .register-form-group label {
   display: block;
@@ -436,6 +437,7 @@ button:hover {
 }
 .register-form-group select {
   padding: 0px 10px;
+
 }
 .register-form-group input:focus,
 .register-form-group input:active,
@@ -535,5 +537,3 @@ small {
     font-size: 24px;
   }
 }
-
-/* Register page end */
