somesmall chnages after rollout

--- a/referral/static/referral/assets/css/style.css
+++ b/referral/static/referral/assets/css/style.css
@@ -537,3 +537,17 @@ small {
     font-size: 24px;
   }
 }
+
+.errorlist {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  border-radius: 5px;
+  padding: 10px 15px;
+  text-align: left;
+  margin-bottom: 7px;
+}
+.errorlist li{
+  list-style-type: none;
+  font-size: 10px;
+}
