--- a/referral/templates/referral/all_req.html
+++ b/referral/templates/referral/all_req.html
@@ -31,7 +31,8 @@
                             <th>Contact</th>
                             <th>Email</th>
                             <th>City</th>
-                            <th>relation</th>
+                            <th>Relation</th>
+                            <th>Site</th>
                           </tr>
 {% for i in acc_req %}
                           <tr class="{{ i.alert }}">
@@ -41,6 +42,7 @@
                             <td>{{ i.user.email }}</td>
                             <td>{{ i.city }}</td>
                             <td>{{ i.i_am }}</td>
+                            <td>{{ i.site }}</td>
                             <td>                  
                         <a href="{% url 'accept' i.id %}" class="btn btn-success btn-sm btn-circle">
                           <i class="fas fa-check"></i>
@@ -57,8 +59,6 @@
                         </tbody>
                       </table>
                     </div>
-                    <a href="{% url 'all_req' %}">All requests &rarr;</a>
-
                 </div>
 
                 </div>
