--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -23,6 +23,7 @@
             <form method="POST" class="form">
               <h3 class="form-heading">Welcome Back!</h3>
               <div class="form-fields">
+              {{ form.non_field_errors }}
               {% csrf_token %}
                 <div class="form-group">
                   <label for="email"> Email address*</label>
