--- a/referral/templates/referral/all_ref.html
+++ b/referral/templates/referral/all_ref.html
@@ -1,7 +1,7 @@
 {% extends "referral/consolebase.html" %}
 {% load crispy_forms_tags %}
 {% block title %}<title>console | all_requests</title>{% endblock title %}
-{% block head %}<h4>Console | all account creation request </h4>{% endblock head %}
+{% block head %}<h4>Console | All referrals </h4>{% endblock head %}
 
 {% block content %}
 <div class="container">
@@ -18,7 +18,6 @@
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Referrals</h6>
-                <a href="#" data-target="#new_referral_form" data-toggle="modal" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-plus fa-sm text-50"></i> Add New Referral</a>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
@@ -58,7 +57,6 @@
                         </tbody>
                       </table>
                     </div><br>
-                    <a href="{% url 'all_ref' %}">All referrals &rarr;</a>
 <br><br>
 {% if urform %}
         <div class="col-xl-12 col-md-12 mb-12">
