--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -34,11 +34,14 @@
                 <b><h3 class="register-form-heading">Create an Account!</h3></b>
                 <div class="register-form-fields">
                   {% csrf_token %}
+                  {{ form.non_field_errors }}
+                  {{ hidden_field.errors }}
                   <div class="form-row">
                     <div class="col">
                       <div class="register-form-group">
                         <label for="firstname"> First Name*</label>
                         {{ form.first_name }}
+                        {{ form.first_name.errors }}
                       </div>
                     </div>
                     <div class="col">
@@ -60,6 +63,7 @@
                       <div class="register-form-group">
                         <label for="email"> Email address*</label>
                         {{ form.email }}
+                        {{ form.email.errors }}
                       </div>
                     </div>
                   </div>
@@ -80,11 +84,13 @@
                   <div class="register-form-group">
                     <label for="password"> Password*</label>
                     {{ form.password1 }}
+                    {{ form.password1.errors }}
                   </div>
 
                   <div class="register-form-group">
                     <label for="Cpassword"> Password confirmation*</label>
                     {{ form.password2 }}
+                    {{ form.password2.errors }}
                     <small
                       >Enter the same password as before, for
                       verification.</small
