new navigation, who reviews req function, email

--- a/referral/templates/referral/console.html
+++ b/referral/templates/referral/console.html
@@ -242,7 +242,7 @@
                         </tbody>
                       </table>
                     </div>
-                    <a href="{% url 'all_req' %}">All requests &rarr;</a>
+                    <a href="{% url 'all_wreq' %}">All requests &rarr;</a>
 
 <br><br>
 {% if wd_form %}
